# jynx

./: .gitignore  Cargo.toml  README.md  test_all_features.sh
docs/: EXPERIMENTAL_PLAN.md  PRODUCT_REQUIREMENTS.md  STATUS.md  STREAM_INTERFACE.md  TECHNICAL_SPEC.md  THEME_SYSTEM.md
src/: lib.rs  template_parser.rs
src/std/: auto_detect.rs  compiled.rs  highlight.rs  mod.rs  theme.rs
themes/: example-theme.yml  kb-default.yml
