[package]
name = "jynx"
version = "2.0.0"
edition = "2021"
description = "Intelligent syntax highlighter with auto-detection, icon mapping and theme inheritance"
license = "MIT"

[[bin]]
name = "jynx"
path = "src/bin/jynx-std.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.5"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"